refactor: content updates

--- a/games/invest_game/templates/question2-5.html
+++ b/games/invest_game/templates/question2-5.html
@@ -26,14 +26,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="voted_last_election" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="voted_last_election" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="voted_last_election" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
@@ -58,14 +52,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="how_voted" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="how_voted" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="how_voted" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
