--- a/games/invest_game/templates/question2.html
+++ b/games/invest_game/templates/question2.html
@@ -27,14 +27,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="general_trustworthiness" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="general_trustworthiness" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="general_trustworthiness" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
@@ -93,6 +87,12 @@
         Twitter
       </label>
     </div>
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" id="news_source" name="news_source" value="other" />
+        Other
+      </label>
+    </div>
 
     <p><b>Are your political views generally closer to those of</b></p>
     <div class="radio">
@@ -115,14 +115,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="political_views" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="political_views" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="political_views" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
@@ -141,14 +135,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="us_citizen" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="us_citizen" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="us_citizen" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
