--- a/games/invest_game/templates/question3.html
+++ b/games/invest_game/templates/question3.html
@@ -24,14 +24,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="approve_of_trump" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="approve_of_trump" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="approve_of_trump" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
@@ -59,14 +53,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="economic_outlook" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="economic_outlook" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="economic_outlook" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
@@ -91,14 +79,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="muslims_in_neighborhood" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="muslims_in_neighborhood" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="muslims_in_neighborhood" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
@@ -123,14 +105,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="muslim_coworkers" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="muslim_coworkers" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="muslim_coworkers" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
@@ -152,14 +128,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="self_treated_unfairly" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="self_treated_unfairly" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="self_treated_unfairly" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
@@ -192,14 +162,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="race_treated_unfairly" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="race_treated_unfairly" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="race_treated_unfairly" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
@@ -230,14 +194,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="religion_treated_unfairly" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="religion_treated_unfairly" value="refused_to_answer" />
-        Refused to answer
+        <input type="radio" name="religion_treated_unfairly" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
@@ -271,14 +229,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="islamic_extremism" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="islamic_extremism" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="islamic_extremism" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
@@ -314,14 +266,8 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="reducing_terrorism" value="dont_know" />
-        Don't know
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="reducing_terrorism" value="refuse_to_answer" />
-        Refuse to answer
+        <input type="radio" name="reducing_terrorism" value="dont_know_or_refuse" />
+        Don't know/Refuse to answer
       </label>
     </div>
 
