--- a/games/invest_game/templates/question4.html
+++ b/games/invest_game/templates/question4.html
@@ -12,7 +12,7 @@
 
     <div id="questions">
       <div class="random">
-        <p><b>Covid-19 was a bioweapon designed by China to wage war on the United States.</b></p>
+        <p><b>The virus causing COVID-19 was a bioweapon designed by China to wage war on the United States.</b></p>
         <div class="radio">
           <label>
             <input type="radio" name="covid_bioweapon" value="strongly_disagree" />
@@ -45,20 +45,14 @@
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="covid_bioweapon" value="dont_know" />
-            Don't know
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="covid_bioweapon" value="refuse_to_answer" />
-            Refuse to answer
+            <input type="radio" name="covid_bioweapon" value="dont_know_or_refuse" />
+            Don't know/Refuse to answer
           </label>
         </div>
       </div>
 
       <div class="random">
-        <p><b>Who is more to blame for the coronavirus pandemic in the United States?</b></p>
+        <p><b>Who is more to blame for the COVID-19 in the United States?</b></p>
         <div class="radio">
           <label>
             <input type="radio" name="covid_blame" value="chinese_government" />
@@ -79,14 +73,8 @@
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="covid_blame" value="dont_know" />
-            Don't know
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="covid_blame" value="refuse_to_anaswer" />
-            Refuse to answer
+            <input type="radio" name="covid_blame" value="dont_know_or_refuse" />
+            Don't know/Refuse to answer
           </label>
         </div>
       </div>
@@ -125,20 +113,14 @@
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="share_equipment" value="dont_know" />
-            Don't know
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="share_equipment" value="refuse_to_answer" />
-            Refuse to answer
+            <input type="radio" name="share_equipment" value="dont_know_or_refuse" />
+            Don't know/Refuse to answer
           </label>
         </div>
       </div>
 
       <div class="random">
-        <p><b>Covid-19 can only be beaten if countries cooperate in finding treatments and a vaccine.</b></p>
+        <p><b>COVID-19 can only be beaten if countries cooperate in finding treatments and a vaccine.</b></p>
         <div class="radio">
           <label>
             <input type="radio" name="cooperate_treatment" value="strongly_disagree" />
@@ -171,62 +153,47 @@
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="cooperate_treatment" value="dont_know" />
-            Don't know
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="cooperate_treatment" value="refuse_to_answer" />
-            Refuse to answer
+            <input type="radio" name="cooperate_treatment" value="dont_know_or_refuse" />
+            Don't know/Refuse to answer
           </label>
         </div>
       </div>
 
       <div class="random">
-        <p><b>Suppose you are in charge of the local hospital. You are beginning to see patients with severe cases of Covid-19. Unfortunately, the hospital has a limited supply of ventilators, and you know that you will have to make hard choices about who will get them very soon. How would you set hospital policy for members of the following groups...?</b></p>
+        <p><b>Suppose you are in charge of the local hospital. You are beginning to see patients with severe cases of COVID-19. Unfortunately, the hospital has a limited supply of ventilators, and you know that you will have to make hard choices about who will get them very soon. How would you set hospital policy for members of the following groups...?</b></p>
         <div class="radio-subgroup">
           <p><em>Patients over 65</em></p>
           <div class="radio">
             <label>
-              <input type="radio" name="over_65_ventilators" value="no_ventilators" />
-              No ventilators
+              <input type="radio" name="over_65_ventilators" value="1" />
+              Never gets a ventilator
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="over_65_ventilators" value="low_preference_ventilators" />
-              Low preference for ventilators
+              <input type="radio" name="over_65_ventilators" value="2" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="over_65_ventilators" value="ventilators_if_available" />
-              Ventilators, if available
+              <input type="radio" name="over_65_ventilators" value="3" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="over_65_ventilators" value="high_preference_ventilators" />
-              High preference for ventilators
+              <input type="radio" name="over_65_ventilators" value="4" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="over_65_ventilators" value="always_ventilators" />
-              Always gets ventilators
+              <input type="radio" name="over_65_ventilators" value="5" />
+              Always gets a ventilator
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="over_65_ventilators" value="dont_know" />
-              Don't know
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="over_65_ventilators" value="refuse_to_answer" />
-              Refuse to answer
+              <input type="radio" name="over_65_ventilators" value="dont_know_or_refuse" />
+              Don't know/Refuse to answer
             </label>
           </div>
         </div>
@@ -234,44 +201,35 @@
           <p><em>Non-U.S. citizens</em></p>
           <div class="radio">
             <label>
-              <input type="radio" name="non_us_citizens_ventilators" value="no_ventilators" />
-              No ventilators
+              <input type="radio" name="non_us_citizens_ventilators" value="1" />
+              Never gets a ventilator
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="non_us_citizens_ventilators" value="low_preference_ventilators" />
-              Low preference for ventilators
+              <input type="radio" name="non_us_citizens_ventilators" value="2" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="non_us_citizens_ventilators" value="ventilators_if_available" />
-              Ventilators, if available
+              <input type="radio" name="non_us_citizens_ventilators" value="3" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="non_us_citizens_ventilators" value="high_preference_ventilators" />
-              High preference for ventilators
+              <input type="radio" name="non_us_citizens_ventilators" value="4" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="non_us_citizens_ventilators" value="always_ventilators" />
-              Always gets ventilators
+              <input type="radio" name="non_us_citizens_ventilators" value="5" />
+              Always gets a ventilator
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="non_us_citizens_ventilators" value="dont_know" />
-              Don't know
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="non_us_citizens_ventilators" value="refuse_to_answer" />
-              Refuse to answer
+              <input type="radio" name="non_us_citizens_ventilators" value="dont_know_or_refuse" />
+              Don't know/Refuse to answer
             </label>
           </div>
         </div>
@@ -279,44 +237,34 @@
           <p><em>Muslim Americans</em></p>
           <div class="radio">
             <label>
-              <input type="radio" name="muslim_americans_ventilators" value="no_ventilators" />
-              No ventilators
+              <input type="radio" name="muslim_americans_ventilators" value="1" />
+              Never gets a ventilator
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="muslim_americans_ventilators" value="low_preference_ventilators" />
-              Low preference for ventilators
+              <input type="radio" name="muslim_americans_ventilators" value="2" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="muslim_americans_ventilators" value="ventilators_if_available" />
-              Ventilators, if available
+              <input type="radio" name="muslim_americans_ventilators" value="3" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="muslim_americans_ventilators" value="high_preference_ventilators" />
-              High preference for ventilators
+              <input type="radio" name="muslim_americans_ventilators" value="4" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="muslim_americans_ventilators" value="always_ventilators" />
-              Always gets ventilators
+              <input type="radio" name="muslim_americans_ventilators" value="5" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="muslim_americans_ventilators" value="dont_know" />
-              Don't know
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="muslim_americans_ventilators" value="refuse_to_answer" />
-              Refuse to answer
+              <input type="radio" name="muslim_americans_ventilators" value="dont_know_or_refuse" />
+              Don't know/Refuse to answer
             </label>
           </div>
         </div>
@@ -324,44 +272,35 @@
           <p><em>Chinese Americans</em></p>
           <div class="radio">
             <label>
-              <input type="radio" name="chinese_americans_ventilators" value="no_ventilators" />
-              No ventilators
+              <input type="radio" name="chinese_americans_ventilators" value="1" />
+              Never gets a ventilator
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="chinese_americans_ventilators" value="low_preference_ventilators" />
-              Low preference for ventilators
+              <input type="radio" name="chinese_americans_ventilators" value="2" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="chinese_americans_ventilators" value="ventilators_if_available" />
-              Ventilators, if available
+              <input type="radio" name="chinese_americans_ventilators" value="3" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="chinese_americans_ventilators" value="high_preference_ventilators" />
-              High preference for ventilators
+              <input type="radio" name="chinese_americans_ventilators" value="4" />
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="chinese_americans_ventilators" value="always_ventilators" />
-              Always gets ventilators
+              <input type="radio" name="chinese_americans_ventilators" value="5" />
+              Always gets a ventilator
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="chinese_americans_ventilators" value="dont_know" />
-              Don't know
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="chinese_americans_ventilators" value="refuse_to_answer" />
-              Refuse to answer
+              <input type="radio" name="chinese_americans_ventilators" value="dont_know_or_refuse" />
+              Don't know/Refuse to answer
             </label>
           </div>
         </div>
