--- a/games/static/games/css/project.css
+++ b/games/static/games/css/project.css
@@ -88,12 +88,6 @@ th {
   width: 100%;
 }
 
-h4,
-p,
-.alert {
-  line-height: 160%;
-}
-
 #copyright {
   color: white;
   margin-bottom: 0px;
@@ -323,14 +317,15 @@ td.slim button {
 #InvestorCoinsLabel {
   position: absolute;
   top: 220px;
-  left: 13px;
+  width: 100px;
   color: green;
 }
 
 #RespondentCoinsLabel {
   position: absolute;
   top: 220px;
-  right: 7px;
+  width: 100px;
+  right: 0;
   color: blue;
 }
 
@@ -408,12 +403,24 @@ td.slim button {
 }
 
 .questionnaire-content {
+  font-size: 18px;
   margin: 40px 0 90px 30px;
 }
 
 .questionnaire-content .radio,
 .questionnaire-content .checkbox {
   margin-left: 16px;
+}
+
+.questionnaire-content .radio label,
+.questionnaire-content .checkbox label {
+  line-height: 26px;
+  padding-left: 24px;
+}
+
+.questionnaire-content input[type=checkbox],
+.questionnaire-content input[type=radio] {
+  margin-left: -24px;
 }
 
 .questionnaire-content .radio-subgroup {
