--- a/games/invest_game/templates/question1.html
+++ b/games/invest_game/templates/question1.html
@@ -69,7 +69,7 @@
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="multiple_agreement_question" value="dont_know" />
+          <input type="radio" name="multiple_agreement_question" value="dont_know_or_refuse" />
           Don't know.
         </label>
       </div>
@@ -150,7 +150,7 @@
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="multiple_agreement_question" value="dont_know" />
+          <input type="radio" name="multiple_agreement_question" value="dont_know_or_refuse" />
           Don't know.
         </label>
       </div>
@@ -231,7 +231,7 @@
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="multiple_agreement_question" value="dont_know" />
+          <input type="radio" name="multiple_agreement_question" value="dont_know_or_refuse" />
           Don't know.
         </label>
       </div>
