refactor: content updates

--- a/games/invest_game/templates/question4.html
+++ b/games/invest_game/templates/question4.html
@@ -13,8 +13,7 @@
     <div id="questions">
       <div class="random">
         <p><b>The virus causing COVID-19 was a bioweapon designed by China to wage war on the United States.</b></p>
-        <div class="radio">
-          <label>
+        <div class="radio"> <label>
             <input type="radio" name="covid_bioweapon" value="strongly_disagree" />
             Strongly disagree
           </label>
