--- a/games/static/games/css/project.css
+++ b/games/static/games/css/project.css
@@ -62,10 +62,6 @@ body {
   margin-bottom: 28px;
 }
 
-ul li {
-  font-size: 16px;
-}
-
 ul ul {
   margin-bottom: 10px;
 }
@@ -407,6 +403,12 @@ td.slim button {
   margin: 40px 0 90px 30px;
 }
 
+.questionnaire-content ul {
+  font-size: 18px;
+  margin-bottom: 24px;
+  font-style: italic;
+}
+
 .questionnaire-content .radio,
 .questionnaire-content .checkbox {
   margin-left: 16px;
@@ -458,9 +460,6 @@ td.slim button {
   h3,
   h4,
   p {
-    font-size: 13px;
-  }
-  ul li {
     font-size: 13px;
   }
   .jumbotron p {
