refactor: content updates

--- a/games/invest_game/templates/question4.html
+++ b/games/invest_game/templates/question4.html
@@ -165,28 +165,31 @@
           <div class="radio">
             <label>
               <input type="radio" name="over_65_ventilators" value="1" />
-              Never gets a ventilator
+              1: Never gets a ventilator
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="over_65_ventilators" value="2" />
+              2
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="over_65_ventilators" value="3" />
+              3
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="over_65_ventilators" value="4" />
+              4
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="over_65_ventilators" value="5" />
-              Always gets a ventilator
+              5: Always gets a ventilator
             </label>
           </div>
           <div class="radio">
@@ -201,28 +204,31 @@
           <div class="radio">
             <label>
               <input type="radio" name="non_us_citizens_ventilators" value="1" />
-              Never gets a ventilator
+              1: Never gets a ventilator
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="non_us_citizens_ventilators" value="2" />
+              2
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="non_us_citizens_ventilators" value="3" />
+              3
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="non_us_citizens_ventilators" value="4" />
+              4
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="non_us_citizens_ventilators" value="5" />
-              Always gets a ventilator
+              5: Always gets a ventilator
             </label>
           </div>
           <div class="radio">
@@ -237,27 +243,31 @@
           <div class="radio">
             <label>
               <input type="radio" name="muslim_americans_ventilators" value="1" />
-              Never gets a ventilator
+              1: Never gets a ventilator
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="muslim_americans_ventilators" value="2" />
+              2
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="muslim_americans_ventilators" value="3" />
+              3
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="muslim_americans_ventilators" value="4" />
+              4
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="muslim_americans_ventilators" value="5" />
+              5: Always gets a ventilator
             </label>
           </div>
           <div class="radio">
@@ -272,28 +282,31 @@
           <div class="radio">
             <label>
               <input type="radio" name="chinese_americans_ventilators" value="1" />
-              Never gets a ventilator
+              1: Never gets a ventilator
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="chinese_americans_ventilators" value="2" />
+              2
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="chinese_americans_ventilators" value="3" />
+              3
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="chinese_americans_ventilators" value="4" />
+              4
             </label>
           </div>
           <div class="radio">
             <label>
               <input type="radio" name="chinese_americans_ventilators" value="5" />
-              Always gets a ventilator
+              5: Always gets a ventilator
             </label>
           </div>
           <div class="radio">
