refactor: content updates

--- a/games/invest_game/templates/question1.html
+++ b/games/invest_game/templates/question1.html
@@ -40,43 +40,37 @@
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="none" />
-          I agree with none of the above.
+          I agree with none of the above
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="exactly_1" />
-          I agree with exactly 1 of the above statements.
+          I agree with exactly 1 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="exactly_2" />
-          I agree with exactly 2 of the above statements.
+          I agree with exactly 2 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="exactly_3" />
-          I agree with exactly 3 of the above statements.
+          I agree with exactly 3 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="all_4" />
-          I agree with all 4 of the above statements.
+          I agree with all 4 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="dont_know_or_refuse" />
-          Don't know.
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="multiple_agreement_question" value="refuse_to_answer" />
-          Refuse to answer.
+          Don't know/Refuse to answer
         </label>
       </div>
       <input type="hidden" name="multiple_agreement_question_type" value="control">
@@ -115,49 +109,43 @@
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="none" />
-          I agree with none of the above.
+          I agree with none of the above
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="exactly_1" />
-          I agree with exactly 1 of the above statements.
+          I agree with exactly 1 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="exactly_2" />
-          I agree with exactly 2 of the above statements.
+          I agree with exactly 2 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="exactly_3" />
-          I agree with exactly 3 of the above statements.
+          I agree with exactly 3 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="exactly_4" />
-          I agree with exactly 4 of the above statements.
+          I agree with exactly 4 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="all_5" />
-          I agree with all 5 of the above statements.
+          I agree with all 5 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="dont_know_or_refuse" />
-          Don't know.
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="multiple_agreement_question" value="refuse_to_answer" />
-          Refuse to answer.
+          Don't know/Refuse to answer
         </label>
       </div>
       <input type="hidden" name="multiple_agreement_question_type" value="with_immigration">
@@ -196,49 +184,43 @@
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="none" />
-          I agree with none of the above.
+          I agree with none of the above
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="exactly_1" />
-          I agree with exactly 1 of the above statements.
+          I agree with exactly 1 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="exactly_2" />
-          I agree with exactly 2 of the above statements.
+          I agree with exactly 2 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="exactly_3" />
-          I agree with exactly 3 of the above statements.
+          I agree with exactly 3 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="exactly_4" />
-          I agree with exactly 4 of the above statements.
+          I agree with exactly 4 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="all_5" />
-          I agree with all 5 of the above statements.
+          I agree with all 5 of the above statements
         </label>
       </div>
       <div class="radio">
         <label>
           <input type="radio" name="multiple_agreement_question" value="dont_know_or_refuse" />
-          Don't know.
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="multiple_agreement_question" value="refuse_to_answer" />
-          Refuse to answer.
+          Don't know/Refuse to answer
         </label>
       </div>
       <input type="hidden" name="multiple_agreement_question_type" value="with_muslim_immigration">
