--- a/games/static/games/css/project.css
+++ b/games/static/games/css/project.css
@@ -446,6 +446,23 @@ td.slim button {
   margin-top: 24px;
 }
 
+.questionnaire-content .text label {
+  display: flex;
+  font-weight: initial;
+  margin-bottom: 16px;
+}
+
+.questionnaire-content .text .text-label {
+  flex: 1;
+  text-align: right;
+  margin-right: 16px;
+}
+
+.questionnaire-content .text input,select {
+  flex: 3;
+  margin-right: 56px;
+}
+
 @media (max-width: 767px) {
   .btn-lg {
     font-size: 16px;
