refactor(compare.html): content tweak

--- a/games/invest_game/templates/compare.html
+++ b/games/invest_game/templates/compare.html
@@ -25,7 +25,7 @@
     <li>
       <h3>
         Therefore you earned ${{user_left}} + ${{respondent_investment}} + ${{user_bonus}} =
-        ${{received}} in total. Dynata will send you a check after you finish today's survey.
+        ${{received}} in total. We will send you a check after you finish today's survey.
       </h3>
     </li>
     <li>
